# agenterm

./: .gitignore  AGENTS.md  Makefile  README.md  SPEC.md  TASK-01-project-scaffold.md  TASK-04-websocket-hub.md  TASK-05-frontend-ui.md  TASK.md  compound-engineering.local.md  go.mod  go.sum  test_scaffold.sh
configs/: embed.go
docs/: 2026-03-04-codebase-audit.md  2026-03-04-onboarding-flow.md  2026-03-04-pivot-new-version.md  DECISION-vnext.md  FEATURE-ai-genesis.md  PLAN-demand-pool.md  PLAN-orchestrator-interface-e2e-tests.md  PLAN-vnext-tauri-rewrite.md  TASK-02-tmux-gateway.md  TASK-06-integration.md  TASK-07-database-models.md  TASK-08-rest-api.md  TASK-09-agent-registry.md  TASK-10-multi-session-tmux.md  TASK-11-worktree-management.md  TASK-12-session-lifecycle.md  TASK-13-frontend-react.md  TASK-14-dashboard-ui.md  TASK-15-orchestrator.md  TASK-16-automation.md  TASK-17-pm-chat-ui.md  TASK-18-playbook-system.md  TAURI-PREFLIGHT-QUESTIONS.md  TEST_PLAN.md  agentic-setup.md  orchestrator-architecture.md  orchestrator-required-skills.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: agentic-bootstrap.sh  auto-commit.sh  on-agent-stop.sh  reset-test-projects-db.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
todos/: 001-complete-p1-gateway-start-does-not-fail-fast-on-missing-session.md  001-complete-p1-token-leakage-in-startup-contract.md  001-complete-p2-go-version-drift-from-task-spec.md  001-p1-token-leakage-in-startup-contract.md  002-complete-p2-config-format-contradiction.md  (+83 more)
(+4270 files in other folders)
